<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_seller"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:layout_margin="@dimen/title_dimen"
        android:id="@+id/login_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separate_line"
        android:layout_below="@+id/login_title"
        android:id="@+id/login_separate_line"/>

    <EditText
        android:id="@+id/seller_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_separate_line"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/user_name"
        android:background="@drawable/corner_edit"/>

    <EditText
        android:id="@+id/seller_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_login_username"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/password"
        android:background="@drawable/corner_edit"
        android:inputType="textPassword"/>
    
    <LinearLayout
        android:id="@+id/login_verify_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/seller_login_password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/verify_code"
            android:background="@drawable/corner_edit"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/seller_login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/login_verify_layout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/corner_button"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/yellow"
        android:textSize="@dimen/button_text"
        android:layout_below="@+id/seller_login_submit"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"/>
</RelativeLayout>
