<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:overScrollMode="never">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/manager_background"
            android:paddingBottom="20dp">
            <TextView
                android:id="@+id/seller_manager_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller_manager_title"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="@dimen/title_dimen"
                android:background="@color/white"/>


            <View
                android:id="@+id/seller_manager_separate_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separate_line"
                android:layout_below="@+id/seller_manager_title"/>

            <RelativeLayout
                android:id="@+id/seller_user_img_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/seller_manager_separate_line"
                android:background="@drawable/photo_bg">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/seller_portrait"
                    android:layout_centerInParent="true"
                    android:src="@drawable/user_portrait"/>
                <TextView
                    android:id="@+id/user_name_and_integral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我的用户名  积分：9000"
                    android:textSize="@dimen/text_medium_size"
                    android:textColor="@color/black"
                    android:layout_below="@+id/seller_portrait"
                    android:layout_marginTop="40dp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/my_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seller_user_img_layout"
                android:background="@color/white"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/my_order_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_order"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_text_size"
                    android:layout_margin="15dp"/>


                <TextView
                    android:id="@+id/see_all_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all_orders"
                    android:layout_alignParentRight="true"
                    android:layout_margin="15dp"
                    android:textSize="@dimen/title_text_size"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/order_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_order"
                android:layout_marginTop="1dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:padding="8dp">

            <TextView
                android:id="@+id/low_inventory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="库存低"
                android:textSize="@dimen/text_medium_size"
                android:textColor="@color/black"
                android:gravity="center"
                android:drawableTop="@drawable/icon1"
                android:drawablePadding="10dp"
                android:singleLine="true"/>
                <TextView
                    android:id="@+id/wait_handle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="待受理"
                    android:textSize="@dimen/text_medium_size"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:drawableTop="@drawable/icon2"
                    android:drawablePadding="10dp"
                    android:singleLine="true"/>
                <TextView
                    android:id="@+id/handled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="已受理"
                    android:textSize="@dimen/text_medium_size"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:drawableTop="@drawable/icon3"
                    android:drawablePadding="10dp"
                    android:singleLine="true"/>
                <TextView
                    android:id="@+id/packaging"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="打包中"
                    android:textSize="@dimen/text_medium_size"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:drawableTop="@drawable/icon4"
                    android:drawablePadding="10dp"
                    android:singleLine="true"/>
                <TextView
                    android:id="@+id/deliverying"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="配送中"
                    android:textSize="@dimen/text_medium_size"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:drawableTop="@drawable/icon5"
                    android:drawablePadding="10dp"
                    android:singleLine="true"/>
                <TextView
                    android:id="@+id/problem_package"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="问题件"
                    android:textSize="@dimen/text_medium_size"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:drawableTop="@drawable/icon6"
                    android:drawablePadding="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <RelativeLayout
                android:id="@+id/manager_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/order_menu"
                android:padding="15dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="订单管理"
                    android:drawableLeft="@drawable/icon7"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium_size"
                    android:gravity="center"
                    android:drawablePadding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&gt;"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/icon_text"/>

                

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/manager_evaluate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_below="@+id/manager_orders"
                android:padding="15dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="评价管理"
                    android:drawableLeft="@drawable/icon8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium_size"
                    android:gravity="center"
                    android:drawablePadding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&gt;"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/icon_text"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/mall_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_below="@+id/manager_evaluate"
                android:padding="15dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="商城消息"
                    android:drawableLeft="@drawable/icon9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium_size"
                    android:gravity="center"
                    android:drawablePadding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&gt;"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/icon_text"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/account_security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_below="@+id/mall_msg"
                android:padding="15dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="账号安全"
                    android:drawableLeft="@drawable/icon10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium_size"
                    android:gravity="center"
                    android:drawablePadding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&gt;"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/icon_text"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/goods_head_quarter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/account_security"
                android:padding="15dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="总店商品"
                    android:drawableLeft="@drawable/icon11"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium_size"
                    android:gravity="center"
                    android:drawablePadding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&gt;"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/icon_text"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/goods_on_selling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_below="@+id/goods_head_quarter"
                android:padding="15dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="出售中的商品"
                    android:drawableLeft="@drawable/icon12"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium_size"
                    android:gravity="center"
                    android:drawablePadding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&gt;"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/icon_text"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/goods_on_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_below="@+id/goods_on_selling"
                android:padding="15dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="仓库中的商品"
                    android:drawableLeft="@drawable/icon14"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium_size"
                    android:gravity="center"
                    android:drawablePadding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&gt;"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/icon_text"/>

            </RelativeLayout>

            <Button
                android:id="@+id/quit_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="退出登录"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text"
                android:background="@drawable/corner_button"
                android:layout_below="@+id/goods_on_store"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>